2006-10-13  Erik G. Larsson  <erik_g_larsson@sourceforge.net>

	* doc/tutorial/src/mimoconv.doc: Update to reflect the change in
	LLR convention.

2006-10-12  Erik G. Larsson  <erik_g_larsson@sourceforge.net>

	* itpp/comm/llr.h, itpp/comm/modulator_nd.*: Changed the
	definition of LLRs from log(P(b=1)/P(b=0)) to log(P(b=0)/P(b=1))
	in the LLR and Modulator_ND classes. This was done to conform to
	the conventions in the scalar modulator class. (Note the interface
	change.)

	* doc/tutorial/tutorial.doc, doc/tutorial/mimoconv.doc,
	doc/tutorial/src/mimoconv.cpp: Added first version of new MIMO
	tutorial.

2006-10-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.h: Additional check added to prevent
	improper initialisation of symbols and bit2symbols in the
	Modulator class. This fix is related to bug [1572807].

2006-10-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itassert.cpp, itpp/base/itassert.h: Implemented 
	feature request [1569867]. Now, it_assert(), it_warning() and
	it_error() functions can use stream operators like `<<' or
	`std::endl' in a concatenation with strings, e.g. 
	`it_error("Wrong value x = " << oct << x)'. Thanks to George
	Jongren for submitting a patch.

2006-09-03  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/matlab_itpp.doc: Expanded the Matlab/IT++
	conversion table.

2006-09-02  Erik G. Larsson  <erik_g_larsson@users.sourceforget.net>

	* itpp/comm/modulator.h, modulator_nd.h, modulator_nd.cpp:
	Documentation update and improvement of range checking in
	interface.

2006-09-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.am: Added new `snapshot', `snapshot-src' and
	`snapshot-html' targets for automatic creation of snapshot
	distribution packages.

2006-08-31  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* doc/tutorial/itfile.doc: Fixed small documentation bug.

2006-08-24  Adam Piatyszek  <ediap@users.sourceforge.net>
