@@ -1,3 +1,7 @@
+2006-10-14  Erik G. Larsson  <erik_g_larsson@sourceforge.net>
+
+	* doc/tutorial/src/mimoconv.doc: Improvement to tutorial example.
+
 2006-10-13  Erik G. Larsson  <erik_g_larsson@sourceforge.net>
 
 	* doc/tutorial/src/mimoconv.doc: Update to reflect the change in
